-
Bug
-
Resolution: Fixed
-
Blocker
-
Lustre 2.6.0
-
3
-
13345
The DNE2 solution architecture states that 2.4 clients should return -ENOTSUPP when trying to access a master/DNE Phase 2 striped directory.
I did a quick test of this, and did not receive this error. Instead, the client LBUGged. Perhaps this only applies to later versions of 2.4 - I tested 2.4.0.
"striped_directory" is on 2 master MDSes, with two MDTs each. It was created like this, from a master client:
lfs setdirstripe -c 4 -D striped_directory
Here's what happened on my 2.4.0 client:
[root@centclient18 centssm1]# ls
striped_directory
[root@centclient18 centssm1]# cd striped_directory/
[root@centclient18 striped_directory]# ls
file file10 file2 file3 file4 file5 file6 file7 file8 file9
[root@centclient18 striped_directory]# touch file11
[root@centclient18 striped_directory]# ls -la
total 8
drwxr-xr-x 2 root root 4096 Mar 31 04:47 .
drwxr-xr-x 4 root root 4096 Mar 31 04:36 ..
rw-rr- 1 root root 0 Mar 31 04:47 file
rw-rr- 1 root root 0 Mar 31 04:47 file10
rw-rr- 1 root root 0 Mar 31 04:50 file11
rw-rr- 1 root root 0 Mar 31 04:47 file2
rw-rr- 1 root root 0 Mar 31 04:47 file3
rw-rr- 1 root root 0 Mar 31 04:47 file4
rw-rr- 1 root root 0 Mar 31 04:47 file5
rw-rr- 1 root root 0 Mar 31 04:47 file6
rw-rr- 1 root root 0 Mar 31 04:47 file7
rw-rr- 1 root root 0 Mar 31 04:47 file8
rw-rr- 1 root root 0 Mar 31 04:47 file9
[root@centclient18 striped_directory]# lfs getdirstripe .
.
lmv_stripe_count: 1
lmv_stripe_offset: 0
mdtidx FID[seq:oid:ver]
0 [0x600000400:0x1:0x0]
[root@centclient18 striped_directory]# mkdir test
[root@centclient18 striped_directory]# ls
Message from syslogd@centclient18 at Mar 31 04:51:11 ...
kernel:LustreError: 5906:0:(lmv_obd.c:2351:lmv_unpackmd()) ASSERTION( mea_size == lmm_size ) failed:
Message from syslogd@centclient18 at Mar 31 04:51:11 ...
kernel:LustreError: 5906:0:(lmv_obd.c:2351:lmv_unpackmd()) LBUG