LU-4843 mdt: disallow old clients access striped dir

1. When old clients access striped directory, it should
return -EIO.

2. After we send create remote directory to the MDT where
child is reside, we need check whether the parent is
resided on MDT0.

3. add hash_type description.

Signed-off-by: wang di <di.wang@intel.com>
Change-Id: I20c0b04c7e1d9a0cab4241dc39d0648f5631f2f4