lustre/mdt/mdt_internal.h
@@ -589,9 +589,16 @@ static inline void mdt_export_evict(struct obd_export *exp)
 
 /* Here we use LVB_TYPE to check dne client, because it is
  * also landed on 2.4. */
-static inline int mdt_is_dne_client(struct obd_export *exp)
+static inline bool mdt_is_dne_client(struct obd_export *exp)
 {
 	return !!(exp_connect_flags(exp) & OBD_CONNECT_LVB_TYPE);
+}
+
+/* Here we use OBD_CONNECT_DISP_STRIPE to check the client who support
+ * striped directory, because it is also landed on 2.6 */
+static inline bool mdt_is_striped_client(struct obd_export *exp)
+{
+	return exp_connect_flags(exp) & OBD_CONNECT_DISP_STRIPE;
 }
 
 int mdt_get_disposition(struct ldlm_reply *rep, int flag);
