lustre/tests/test-framework.sh
@@ -1183,12 +1183,18 @@ start() {
         eval export ${facet}failover_dev=$device
     fi
 
-    local mntpt=$(facet_mntpt $facet)
-    do_facet ${facet} mkdir -p $mntpt
-    eval export ${facet}_MOUNT=$mntpt
-    mount_facet ${facet}
-    RC=$?
-    return $RC
+	local mntpt=$(facet_mntpt $facet)
+	do_facet ${facet} mkdir -p $mntpt
+	eval export ${facet}_MOUNT=$mntpt
+	mount_facet ${facet}
+
+	if [[ $facet == mds* ]]; then
+		do_facet $facet lctl \
+			set_param -n mdt.${FSNAME}*.enable_remote_dir=1
+	fi
+
+	RC=$?
+	return $RC
 }
 
 stop() {
